force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Deliverd_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Deliverd_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deliverd Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>