force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Freeze_Qunatity__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Qunatity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Freeze Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>