force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Freeze_Stock__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freeze Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Freeze Sales Order Part</relationshipLabel>
    <relationshipName>Sales_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>