force-app/main/default/objects/Sales_Order_Line_Item__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>((SGST__c  -  Amount__c) +   
(CGST__c  -  Amount__c) +   
(IGST__c  -  Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>