force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Taxable_Amount__c + ( Taxable_Amount__c * CGST__c ) + ( Taxable_Amount__c *  SGST__c ) + ( Taxable_Amount__c *  IGST__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>