force-app/main/default/objects/Sales_Order_Line_Item__c/fields/warehouse__c.field-meta.xml
<CustomField>
    <fullName>warehouse__c</fullName>
    <formula>CASESAFEID(Sales_Order__r.Ware_House__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>warehouse</label>
    <type>Text</type>
</CustomField>