force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Warehouse_City__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_City__c</fullName>
    <formula>Product_Part__c+Sales_Order__r.Branch_Office_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse City</label>
    <type>Text</type>
</CustomField>